tests/failure/struct-unit.rs
use derive_from_one::FromOne;

#[derive(FromOne)]
pub struct T;

fn main() {}
